@@ -35,6 +35,7 @@ public:
   bool draw_arrow(std::vector<double> start_point, std::vector<double> direction, bool from_start_point, std::string color, double size); //draw an arrow from a center point, vector, color, size
   bool draw_arrow_flat(std::vector<double> start_point, std::vector<double> direction, bool from_start_point, std::string color, double size); //draw an arrow from a center point, vector, color, size
   bool draw_dof(std::vector<double> coord, int dof, std::string color, double size); //draw dof (1,2,3,4,5,6,11) symbol at coord, color, size
+  bool draw_equation_node(std::vector<double> coord, int dof, std::string color, double size); //draw dof (1,2,3) symbol at coord, color, size
   bool draw_label(std::vector<double> coord, std::string color, double size); //draw label at coordinate
   
   bool draw_load_force(int id, double size = 1); // draw load force with id
