@@ -131,4 +131,5 @@
 2025-01-20 working on adding equations to constraints in core
 2025-01-21 working on equations
 2025-02-14 working on draw surface traction and equation
+2025-02-15 working on draw surface traction and equation
 
